--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
+    "faker": "^5.1.0",
+    "google-maps-react": "^2.0.6",
     "node-sass": "^4.14.1",
+    "random-location": "^1.1.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.9.2",
+    "react-google-maps": "^9.4.5",
     "react-icons": "^3.11.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
